2013-07-31  Eli Zaretskii  <eliz@gnu.org>

	* emacs.texi (Top): Remove menu item for the removed "Disabling
	Multibyte" node.

2013-07-31  Xue Fuqiao  <xfq.free@gmail.com>

	* rmail.texi (Rmail Coding): Move here from mule.texi.

	* custom.texi (Specifying File Variables): Fix cross-references.

	* mule.texi (Unibyte Mode): Fix cross-references.
	(Disabling Multibyte): Remove.

	* macos.texi (Mac / GNUstep Basics): Mention `ns-alternate-modifier'.

	* cal-xtra.texi (Advanced Calendar/Diary Usage): Update menu.
	(Mayan Calendar): Move here from calendar.texi.
	* emacs.texi (Top): Update menu.

2013-07-30  Xue Fuqiao  <xfq.free@gmail.com>

	* emacs.texi (Top): Add menu entry.

	* maintaining.texi (VC Ignore): New node.  Document vc-ignore.
	(VC Directory Commands): Add vc-dir-ignore.

2013-07-28  Xue Fuqiao  <xfq.free@gmail.com>

	* glossary.texi (Glossary): Add some entries.

2013-07-27  Xue Fuqiao  <xfq.free@gmail.com>

	* maintaining.texi (VC Directory Commands): Mention `D' and `L' in
	vc-dir.  (Bug#14948)

2013-07-26  Eli Zaretskii  <eliz@gnu.org>

	* display.texi (Fringes): Document the variable fringe-mode.
	(Bug#14946)

2013-07-03  Glenn Morris  <rgm@gnu.org>

	* maintaining.texi (EDE): Fix cross-reference.

	* programs.texi (Program Modes): Fix emacs-xtra reference.

	* help.texi (Misc Help): Index describe-syntax.

2013-06-29  Eli Zaretskii  <eliz@gnu.org>

	* basic.texi (Moving Point): Document visual-order-cursor-movement
	and its effect on right-char and left-char.

2013-06-28  Glenn Morris  <rgm@gnu.org>

	* ack.texi (Acknowledgments): Small update.

2013-06-19  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (dist): Edit more configure variables.
	Try to check that we do not miss any in future.

2013-06-12  Xue Fuqiao  <xfq.free@gmail.com>

	* vc1-xtra.texi (Revision Tags): Add a cross reference.
	(CVS Options): Fix the default value of `vc-cvs-stay-local'.

2013-06-11  Glenn Morris  <rgm@gnu.org>

	* maintaining.texi (VC Directory Commands): Copyedit.